# A1_manifold_test

./: .gitignore  A1_manifold_test.pro  CMakeLists.txt  README.txt
manifold_test/: DirectedEdge.cpp  DirectedEdge.h  FaceIndex.cpp  FaceIndex.h  PolygenSoup.cpp  PolygenSoup.h  face2faceindex.cpp  faceindex2directededge.cpp  manifoldchecker.cpp
triangle_renderer/: A1_manifold_test.pro
